copy-paste-adjust UI from previous experiment
See https://github.com/ArchibaldBienetre/javaFxTestGradle